Changed code format according to PEP 8

--- a/download_and_process.ipynb
+++ b/download_and_process.ipynb
@@ -156,7 +156,7 @@
     "    filepath = \"input/original_data/\"+filename\n",
     "    \n",
     "    #check if file exists, if not download it\n",
-    "    if os.path.exists(filepath) == False:\n",
+    "    if  not os.path.exists(filepath):\n",
     "        print(\"Downloading file\", filename)\n",
     "        urllib.request.urlretrieve(url, filepath)\n",
     "    else:\n",
@@ -188,58 +188,58 @@
     "\n",
     "# Get TSO data from zip file\n",
     "amprion_df = pd.read_csv(z.open('Amprion_Anlagenstammdaten_2014.csv'),\n",
-    "                       sep=';',        \n",
-    "                       thousands='.', \n",
-    "                       decimal=',',    \n",
-    "                       header=0,\n",
-    "                       parse_dates=[11,12,13,14], \n",
-    "                       encoding = 'cp850',\n",
-    "                       dayfirst=True, \n",
-    "                       low_memory=False)\n",
+    "                         sep=';',\n",
+    "                         thousands='.',\n",
+    "                         decimal=',',\n",
+    "                         header=0,\n",
+    "                         parse_dates=[11, 12, 13, 14],\n",
+    "                         encoding='cp850',\n",
+    "                         dayfirst=True,\n",
+    "                         low_memory=False)\n",
     "\n",
     "hertz_df = pd.read_csv(z.open('50Hertz_Anlagenstammdaten_2014.csv'),\n",
-    "                       sep=';',        \n",
-    "                       thousands='.', \n",
-    "                       decimal=',',   \n",
+    "                       sep=';',\n",
+    "                       thousands='.',\n",
+    "                       decimal=',',\n",
     "                       header=0,\n",
-    "                       parse_dates=[11,12,13,14],  \n",
-    "                       encoding = 'cp1252',\n",
-    "                       dayfirst=True, \n",
+    "                       parse_dates=[11, 12, 13, 14],\n",
+    "                       encoding='cp1252',\n",
+    "                       dayfirst=True,\n",
     "                       low_memory=False)\n",
     "\n",
     "tennet_df = pd.read_csv(z.open('TenneT_Anlagenstammdaten_2014.csv'),\n",
-    "                       sep=';',        \n",
-    "                       thousands='.',  \n",
-    "                       decimal=',',    \n",
-    "                       header=0,\n",
-    "                       parse_dates=[11,12,13,14], \n",
-    "                       encoding = 'cp1252',\n",
-    "                       dayfirst=True, \n",
-    "                       low_memory=False)\n",
+    "                        sep=';',\n",
+    "                        thousands='.',\n",
+    "                        decimal=',',\n",
+    "                        header=0,\n",
+    "                        parse_dates=[11, 12, 13, 14],\n",
+    "                        encoding='cp1252',\n",
+    "                        dayfirst=True,\n",
+    "                        low_memory=False)\n",
     "\n",
     "transnetbw_df = pd.read_csv(z.open('TransnetBW_Anlagenstammdaten_2014.csv'),\n",
-    "                       sep=';',       \n",
-    "                       thousands='.',  \n",
-    "                       decimal=',',    \n",
-    "                       header=0,\n",
-    "                       parse_dates=[11,12,13,14], \n",
-    "                       encoding = 'cp1252',\n",
-    "                       dayfirst=True, \n",
-    "                       low_memory=False)\n",
+    "                            sep=';',\n",
+    "                            thousands='.',\n",
+    "                            decimal=',',\n",
+    "                            header=0,\n",
+    "                            parse_dates=[11, 12, 13, 14],\n",
+    "                            encoding='cp1252',\n",
+    "                            dayfirst=True,\n",
+    "                            low_memory=False)\n",
     "\n",
     "# Get BNetzA register \n",
     "bnetza_df = pd.read_excel(downloadandcache(url_bnetza),\n",
-    "                   sheetname='Gesamtübersicht',\n",
-    "                   header=0,\n",
-    "                   converters={'4.9 Postleit-zahl':str})\n",
+    "                          sheetname='Gesamtübersicht',\n",
+    "                          header=0,\n",
+    "                          converters={'4.9 Postleit-zahl': str})\n",
     "\n",
     "# Get BNetzA-PV register\n",
     "bnetza_pv = pd.ExcelFile(downloadandcache(url_bnetza_pv))\n",
     "\n",
     "# Combine all PV BNetzA sheets into one data frame\n",
     "bnetza_pv_df = pd.concat(bnetza_pv.parse(sheet, skiprows=10,\n",
-    "                          converters={'Anlage \\nPLZ':str}\n",
-    "                         ) for sheet in bnetza_pv.sheet_names)\n",
+    "                                         converters={'Anlage \\nPLZ': str}\n",
+    "                                         ) for sheet in bnetza_pv.sheet_names)\n",
     "\n",
     "# Drop not needed NULL \"Unnamed:\" column\n",
     "bnetza_pv_df = bnetza_pv_df.drop(bnetza_pv_df.columns[[7]], axis=1)"
@@ -265,23 +265,23 @@
    "outputs": [],
    "source": [
     "# Get translation list\n",
-    "columnnames =pd.read_csv('input/column_translation_list.csv',sep = \",\",\n",
-    "                           header=0)\n",
+    "columnnames = pd.read_csv('input/column_translation_list.csv', sep=\",\",\n",
+    "                          header=0)\n",
     "\n",
     "columndict = columnnames.set_index('original_name')['column_naming'].to_dict()\n",
     "\n",
     "# Translate columns by list \n",
-    "bnetza_pv_df.rename(columns = columndict , inplace=True)\n",
-    "bnetza_df.rename(columns = columndict , inplace=True)\n",
-    "transnetbw_df.rename(columns = columndict , inplace=True)\n",
-    "tennet_df.rename(columns = columndict , inplace=True)\n",
-    "amprion_df.rename(columns = columndict , inplace=True)\n",
-    "hertz_df.rename(columns = columndict , inplace=True)\n",
+    "bnetza_pv_df.rename(columns=columndict, inplace=True)\n",
+    "bnetza_df.rename(columns=columndict, inplace=True)\n",
+    "transnetbw_df.rename(columns=columndict, inplace=True)\n",
+    "tennet_df.rename(columns=columndict, inplace=True)\n",
+    "amprion_df.rename(columns=columndict, inplace=True)\n",
+    "hertz_df.rename(columns=columndict, inplace=True)\n",
     "\n",
     "# Translate special cases separately\n",
-    "backslash ={'Anlage \\nBundesland': 'federal_state','Anlage \\nOrt oder Gemarkung': \n",
-    "            'city','Anlage \\nPLZ': 'postcode','Anlage \\nStraße oder Flurstück *)': \n",
-    "            'address', 'Installierte \\nNennleistung [kWp]': 'electrical_capacity'}\n",
+    "backslash = {'Anlage \\nBundesland': 'federal_state', 'Anlage \\nOrt oder Gemarkung':\n",
+    "             'city', 'Anlage \\nPLZ': 'postcode', 'Anlage \\nStraße oder Flurstück *)':\n",
+    "             'address', 'Installierte \\nNennleistung [kWp]': 'electrical_capacity'}\n",
     "\n",
     "bnetza_pv_df.rename(columns = backslash, inplace=True)"
    ]
@@ -337,8 +337,8 @@
    "outputs": [],
    "source": [
     "# Merge data frames\n",
-    "dataframes = [transnetbw_df,tennet_df, amprion_df, hertz_df, \n",
-    "             bnetza_pv_df,bnetza_df]\n",
+    "dataframes = [transnetbw_df, tennet_df, amprion_df, hertz_df,\n",
+    "              bnetza_pv_df, bnetza_df]\n",
     "\n",
     "renewables = pd.concat(dataframes)\n",
     "\n",
@@ -364,7 +364,7 @@
     "idx_subtype = renewables[(renewables['source'] != 'BNetzA_PV')].index\n",
     "\n",
     "renewables['generation_subtype'].loc[idx_subtype] = (\n",
-    "                                 renewables['generation_type'].loc[idx_subtype])"
+    "    renewables['generation_type'].loc[idx_subtype])"
    ]
   },
   {
@@ -384,12 +384,12 @@
    },
    "outputs": [],
    "source": [
-    "column_interest = ['start_up_date', 'electrical_capacity','generation_type',\n",
-    "                   'generation_subtype','thermal_capacity','city', 'postcode',\n",
-    "                   'address','tso','dso' ,'utm_zone','utm_east', 'utm_north',\n",
+    "column_interest = ['start_up_date', 'electrical_capacity', 'generation_type',\n",
+    "                   'generation_subtype', 'thermal_capacity', 'city', 'postcode',\n",
+    "                   'address', 'tso', 'dso', 'utm_zone', 'utm_east', 'utm_north',\n",
     "                   'notification_reason', 'eeg_id',\n",
-    "                   'voltage_level','decommission_date',\n",
-    "                   'power_plant_id','source']"
+    "                   'voltage_level', 'decommission_date',\n",
+    "                   'power_plant_id', 'source']"
    ]
   },
   {
@@ -467,15 +467,17 @@
    "outputs": [],
    "source": [
     "# Read translation list\n",
-    "translation_list =pd.read_csv('input/value_translation_list.csv',sep = \",\",\n",
-    "                           header=0)\n",
+    "translation_list = pd.read_csv('input/value_translation_list.csv', \n",
+    "                               sep=\",\",\n",
+    "                               header=0)\n",
     "# Create dictionnary in order to change values \n",
     "translation_dict = translation_list.set_index('original_name')['opsd_naming'].to_dict()\n",
     "\n",
-    "types_list =pd.read_csv('input/generation_types_translation_list.csv',sep = \",\",\n",
-    "                           header=0)\n",
+    "postcode = pd.read_csv('input/de_tso_postcode_gps.csv',\n",
+    "                       sep=';',\n",
+    "                       header=0)\n",
     "\n",
-    "types_dict = types_list.set_index('generation_subtype')['generation_type'].to_dict()\n"
+    "types_dict = types_list.set_index('generation_subtype')['generation_type'].to_dict()"
    ]
   },
   {
@@ -500,7 +502,7 @@
     "renewables['generation_subtype'] = renewables.generation_type\n",
     "\n",
     "# Replace generation_subtype by generation_type\n",
-    "renewables.generation_type.replace(types_dict, inplace=True)\n"
+    "renewables.generation_type.replace(types_dict, inplace=True)"
    ]
   },
   {
@@ -654,8 +656,7 @@
     "ix_notnull= renewables['utm_east'].notnull()\n",
     "\n",
     "# Remove 32 from utm_east entries\n",
-    "renewables.loc[ix_32,'utm_east'] = renewables.loc[ix_32,'utm_east'\n",
-    "                ].astype(str).str[2:].astype(float)"
+    "renewables.loc[ix_32, 'utm_east'] = renewables.loc[ix_32, 'utm_east'].astype(str).str[2:].astype(float)"
    ]
   },
   {
@@ -675,13 +676,12 @@
    "source": [
     "# Convert from UTM values to latitude and longitude coordinates\n",
     "try:\n",
-    "    \n",
-    "    renewables['lonlat'] = renewables.loc[ix_notnull,['utm_east',\n",
-    "    'utm_north','utm_zone']].apply(lambda x: utm.to_latlon(x[0],\n",
-    "    x[1],x[2],'U'), axis=1).astype(str)\n",
-    "    \n",
+    "    renewables['lonlat'] = renewables.loc[ix_notnull, ['utm_east', 'utm_north', 'utm_zone']].apply(\n",
+    "        lambda x: utm.to_latlon(x[0], x[1], x[2], 'U'),\n",
+    "        axis=1) \\\n",
+    "        .astype(str)\n",
+    "        \n",
     "except:\n",
-    "    \n",
     "    renewables['lonlat'] = np.NaN\n",
     "    \n",
     "lat = []\n",
@@ -689,8 +689,7 @@
     "\n",
     "for row in renewables['lonlat']:\n",
     "    try:\n",
-    "        # Split tuple format\n",
-    "        # into the column lat and lon  \n",
+    "        # Split tuple format into the column lat and lon  \n",
     "        row = row.lstrip('(').rstrip(')')\n",
     "        lat.append(row.split(',')[0])\n",
     "        lon.append(row.split(',')[1])\n",
@@ -704,11 +703,13 @@
     "renewables['longitude'] = lon    \n",
     "\n",
     "# Add new values to data frame lon and lat\n",
-    "renewables['lon'] = renewables[['longitude','lon']].apply(lambda x: x[1] \n",
-    "                        if pd.isnull(x[0]) else x[0], axis=1)\n",
+    "renewables['lon'] = renewables[['longitude', 'lon']].apply(\n",
+    "    lambda x: x[1] if pd.isnull(x[0]) else x[0],\n",
+    "    axis=1)\n",
     "\n",
-    "renewables['lat'] = renewables[['latitude','lat']].apply(lambda x: x[1] \n",
-    "                        if pd.isnull(x[0]) else x[0], axis=1)"
+    "renewables['lat'] = renewables[['latitude', 'lat']].apply(\n",
+    "    lambda x: x[1] if pd.isnull(x[0]) else x[0],\n",
+    "    axis=1)"
    ]
   },
   {
@@ -729,8 +730,8 @@
     "print('Missing Coordinates ',renewables.lat.isnull().sum())\n",
     "\n",
     "renewables[renewables.lat.isnull()].groupby(['generation_type',\n",
-    "                                           'source']\n",
-    "                                          )['source'].count()"
+    "                                             'source']\n",
+    "                                            )['source'].count()"
    ]
   },
   {
@@ -761,9 +762,7 @@
    },
    "outputs": [],
    "source": [
-    "renewables.to_sql('raw_data_output', \n",
-    "                 sqlite3.connect('raw_data.sqlite')\n",
-    "                 , if_exists=\"replace\")   "
+    "renewables.to_sql('raw_data_output', sqlite3.connect('raw_data.sqlite'), if_exists=\"replace\")"
    ]
   },
   {
@@ -777,9 +776,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
@@ -791,7 +790,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.1"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
