--- a/validation_and_output.ipynb
+++ b/validation_and_output.ipynb
@@ -56,12 +56,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div class=\"bk-root\">\n",
+       "        <a href=\"http://bokeh.pydata.org\" target=\"_blank\" class=\"bk-logo bk-logo-small bk-logo-notebook\"></a>\n",
+       "        <span id=\"a31333fa-ff8d-4c6a-aaf5-3fd329392e86\">Loading BokehJS ...</span>\n",
+       "    </div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "(function(global) {\n",
+       "  function now() {\n",
+       "    return new Date();\n",
+       "  }\n",
+       "\n",
+       "  if (typeof (window._bokeh_onload_callbacks) === \"undefined\") {\n",
+       "    window._bokeh_onload_callbacks = [];\n",
+       "  }\n",
+       "\n",
+       "  function run_callbacks() {\n",
+       "    window._bokeh_onload_callbacks.forEach(function(callback) { callback() });\n",
+       "    delete window._bokeh_onload_callbacks\n",
+       "    console.info(\"Bokeh: all callbacks have finished\");\n",
+       "  }\n",
+       "\n",
+       "  function load_libs(js_urls, callback) {\n",
+       "    window._bokeh_onload_callbacks.push(callback);\n",
+       "    if (window._bokeh_is_loading > 0) {\n",
+       "      console.log(\"Bokeh: BokehJS is being loaded, scheduling callback at\", now());\n",
+       "      return null;\n",
+       "    }\n",
+       "    if (js_urls == null || js_urls.length === 0) {\n",
+       "      run_callbacks();\n",
+       "      return null;\n",
+       "    }\n",
+       "    console.log(\"Bokeh: BokehJS not loaded, scheduling load and callback at\", now());\n",
+       "    window._bokeh_is_loading = js_urls.length;\n",
+       "    for (var i = 0; i < js_urls.length; i++) {\n",
+       "      var url = js_urls[i];\n",
+       "      var s = document.createElement('script');\n",
+       "      s.src = url;\n",
+       "      s.async = false;\n",
+       "      s.onreadystatechange = s.onload = function() {\n",
+       "        window._bokeh_is_loading--;\n",
+       "        if (window._bokeh_is_loading === 0) {\n",
+       "          console.log(\"Bokeh: all BokehJS libraries loaded\");\n",
+       "          run_callbacks()\n",
+       "        }\n",
+       "      };\n",
+       "      s.onerror = function() {\n",
+       "        console.warn(\"failed to load library \" + url);\n",
+       "      };\n",
+       "      console.log(\"Bokeh: injecting script tag for BokehJS library: \", url);\n",
+       "      document.getElementsByTagName(\"head\")[0].appendChild(s);\n",
+       "    }\n",
+       "  };\n",
+       "\n",
+       "  var js_urls = ['https://cdn.pydata.org/bokeh/release/bokeh-0.12.0.min.js', 'https://cdn.pydata.org/bokeh/release/bokeh-widgets-0.12.0.min.js', 'https://cdn.pydata.org/bokeh/release/bokeh-compiler-0.12.0.min.js'];\n",
+       "\n",
+       "  var inline_js = [\n",
+       "    function(Bokeh) {\n",
+       "      Bokeh.set_log_level(\"info\");\n",
+       "    },\n",
+       "    \n",
+       "    function(Bokeh) {\n",
+       "      Bokeh.$(\"#a31333fa-ff8d-4c6a-aaf5-3fd329392e86\").text(\"BokehJS successfully loaded\");\n",
+       "    },\n",
+       "    function(Bokeh) {\n",
+       "      console.log(\"Bokeh: injecting CSS: https://cdn.pydata.org/bokeh/release/bokeh-0.12.0.min.css\");\n",
+       "      Bokeh.embed.inject_css(\"https://cdn.pydata.org/bokeh/release/bokeh-0.12.0.min.css\");\n",
+       "      console.log(\"Bokeh: injecting CSS: https://cdn.pydata.org/bokeh/release/bokeh-widgets-0.12.0.min.css\");\n",
+       "      Bokeh.embed.inject_css(\"https://cdn.pydata.org/bokeh/release/bokeh-widgets-0.12.0.min.css\");\n",
+       "    }\n",
+       "  ];\n",
+       "\n",
+       "  function run_inline_js() {\n",
+       "    for (var i = 0; i < inline_js.length; i++) {\n",
+       "      inline_js[i](window.Bokeh);\n",
+       "    }\n",
+       "  }\n",
+       "\n",
+       "  if (window._bokeh_is_loading === 0) {\n",
+       "    console.log(\"Bokeh: BokehJS loaded, going straight to plotting\");\n",
+       "    run_inline_js();\n",
+       "  } else {\n",
+       "    load_libs(js_urls, function() {\n",
+       "      console.log(\"Bokeh: BokehJS plotting callback run at\", now());\n",
+       "      run_inline_js();\n",
+       "    });\n",
+       "  }\n",
+       "}(this));"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "\n",
     "# importing all necessary Python libraries for this Script\n",
@@ -103,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -111,9 +215,9 @@
    "source": [
     "# Read data from script Part 1\n",
     "DE_re = pd.read_pickle('DE_renewables.pickle')\n",
-    "DK_re = pd.read_pickle('DK_renewables.pickle')\n",
-    "FR_re = pd.read_pickle('FR_renewables.pickle')\n",
-    "PL_re = pd.read_pickle('PL_renewables.pickle')"
+    "# DK_re = pd.read_pickle('DK_renewables.pickle')\n",
+    "# FR_re = pd.read_pickle('FR_renewables.pickle')\n",
+    "# PL_re = pd.read_pickle('PL_renewables.pickle')"
    ]
   },
   {
@@ -131,11 +235,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Validation marker</th>\n",
+       "      <th>Explanation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>R_1</td>\n",
+       "      <td>The data frame overlaps in date of the record ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>R_2</td>\n",
+       "      <td>The commissioning_date column has no entry (NA...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>R_3</td>\n",
+       "      <td>All power plant entries which do not have \"sta...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>R_4</td>\n",
+       "      <td>commissioning_date of PV system is older than ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>R_5</td>\n",
+       "      <td>electrical_capacity is not specified.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>R_6</td>\n",
+       "      <td>Duplicated entry. The power plant has a grid_d...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>R_7</td>\n",
+       "      <td>Decommissioned</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Validation marker                                        Explanation\n",
+       "0               R_1  The data frame overlaps in date of the record ...\n",
+       "1               R_2  The commissioning_date column has no entry (NA...\n",
+       "2               R_3  All power plant entries which do not have \"sta...\n",
+       "3               R_4  commissioning_date of PV system is older than ...\n",
+       "4               R_5              electrical_capacity is not specified.\n",
+       "5               R_6  Duplicated entry. The power plant has a grid_d...\n",
+       "6               R_7                                     Decommissioned"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Read csv of Marker Explanations\n",
     "validation = pd.read_csv('input/validation_marker.csv',\n",
@@ -160,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -223,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -245,11 +417,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "comment        data_source\n",
+       "               50Hertz        151039\n",
+       "               Amprion        467169\n",
+       "               BNetzA            868\n",
+       "               BNetzA_PV       17134\n",
+       "               TenneT         693073\n",
+       "               TransnetBW     320913\n",
+       "R_1,           BNetzA           3512\n",
+       "               BNetzA_PV       78521\n",
+       "R_1, R_3,      BNetzA           2909\n",
+       "R_1, R_3, R_7  BNetzA            671\n",
+       "R_2, R_3,      BNetzA           1276\n",
+       "R_3,           BNetzA              3\n",
+       "R_3, R_7       BNetzA              1\n",
+       "R_5,           50Hertz             3\n",
+       "R_5,R_7        TransnetBW          5\n",
+       "R_6,           50Hertz          1012\n",
+       "               Amprion          4009\n",
+       "               TenneT            462\n",
+       "               TransnetBW       1556\n",
+       "R_6,R_7        Amprion           397\n",
+       "               TenneT             15\n",
+       "               TransnetBW         38\n",
+       "R_7            50Hertz           136\n",
+       "               Amprion           155\n",
+       "               TenneT            248\n",
+       "               TransnetBW        186\n",
+       "Name: comment, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Count marked entries\n",
     "DE_re.groupby(['comment','data_source'])['comment'].count()"
@@ -257,11 +467,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "comment        energy_source                \n",
+       "               Bioenergy and renewable waste     7146.536204\n",
+       "               Geothermal                          38.935000\n",
+       "               Hydro                             1549.808399\n",
+       "               Other fossil fuels                 223.099000\n",
+       "               Solar                            39162.982189\n",
+       "               Wind                             44880.754263\n",
+       "R_1,           Bioenergy and renewable waste       62.684100\n",
+       "               Geothermal                           3.800000\n",
+       "               Hydro                                6.281050\n",
+       "               Other fossil fuels                   0.006000\n",
+       "               Solar                              477.533366\n",
+       "               Wind                              8860.719460\n",
+       "R_1, R_3,      Bioenergy and renewable waste      997.188590\n",
+       "               Hydro                               83.310700\n",
+       "               Other fossil fuels                  16.111000\n",
+       "               Solar                               16.084010\n",
+       "               Wind                              2192.385000\n",
+       "R_1, R_3, R_7  Bioenergy and renewable waste       23.280400\n",
+       "               Hydro                                0.007000\n",
+       "               Other fossil fuels                   4.077000\n",
+       "               Solar                                9.789530\n",
+       "               Wind                               524.604000\n",
+       "R_2, R_3,      Bioenergy and renewable waste       61.666000\n",
+       "               Hydro                                5.200300\n",
+       "               Other fossil fuels                   0.680000\n",
+       "               Solar                               19.528765\n",
+       "               Wind                              3417.550000\n",
+       "R_3,           Bioenergy and renewable waste        0.056000\n",
+       "               Hydro                                0.030000\n",
+       "R_3, R_7       Wind                                 0.600000\n",
+       "R_5,           Solar                                0.000000\n",
+       "R_5,R_7        Solar                                0.000000\n",
+       "R_6,           Bioenergy and renewable waste       29.752070\n",
+       "               Hydro                                6.459960\n",
+       "               Other fossil fuels                   7.270000\n",
+       "               Solar                              224.753513\n",
+       "               Wind                              1530.691700\n",
+       "R_6,R_7        Bioenergy and renewable waste       12.398000\n",
+       "               Hydro                                6.235000\n",
+       "               Other fossil fuels                   4.941000\n",
+       "               Solar                                9.827748\n",
+       "               Wind                                35.659500\n",
+       "R_7            Bioenergy and renewable waste       46.149410\n",
+       "               Hydro                                1.851000\n",
+       "               Other fossil fuels                  11.508000\n",
+       "               Solar                               13.206381\n",
+       "               Wind                               187.623550\n",
+       "Name: electrical_capacity_kW, dtype: float64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Summarize electrical capacity per energy source of suspect data\n",
     "DE_re.groupby(['comment', 'energy_source'])['electrical_capacity_kW'].sum() / 1000"
@@ -269,11 +538,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "energy_source\n",
+       "Bioenergy and renewable waste     7146.536204\n",
+       "Geothermal                          38.935000\n",
+       "Hydro                             1549.808399\n",
+       "Other fossil fuels                 223.099000\n",
+       "Solar                            39162.982189\n",
+       "Wind                             44880.754263\n",
+       "Name: electrical_capacity_kW, dtype: float64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Summarize electrical capacity per energy source of cleaned data (MW)\n",
     "DE_re_clean.groupby(['energy_source'])['electrical_capacity_kW'].sum() / 1000"
@@ -316,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -337,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -354,11 +641,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\KRa\\Anaconda3\\lib\\site-packages\\ipykernel\\__main__.py:10: FutureWarning: how in .resample() is deprecated\n",
+      "the new syntax is .resample(...).sum()\n",
+      "C:\\Users\\KRa\\Anaconda3\\lib\\site-packages\\ipykernel\\__main__.py:14: FutureWarning: how in .resample() is deprecated\n",
+      "the new syntax is .resample(...).sum()\n"
+     ]
+    }
+   ],
    "source": [
     "# Create cumulated time series per energy source for both yearly and daily time series\n",
     "for gtype in energy_sources:\n",
@@ -378,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -2194,9 +2492,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python3"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
